Added some documentation and updated pom.xml and license